<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_today"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <WebView
        android:id="@+id/web_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1" />

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="20dp" >

        <EditText
            android:id="@+id/editText1"
            android:layout_width="132dp"
            android:layout_height="35dp"
            android:layout_alignLeft="@+id/EditText01"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/EditText01"
            android:layout_alignLeft="@+id/textView6"
            android:text="@string/bath" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView4"
            android:layout_alignLeft="@+id/textView6"
            android:text="@string/bath" />

        <Button
            android:id="@+id/button2"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:layout_alignLeft="@+id/cal_price_btn"
            android:layout_alignParentBottom="true"
            android:text="@string/save" />

        <Button
            android:id="@+id/reset_price_btn"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:layout_alignBaseline="@+id/button2"
            android:layout_alignBottom="@+id/button2"
            android:layout_alignRight="@+id/cal_price_btn"
            android:text="@string/reset" />

        <Button
            android:id="@+id/cal_price_btn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_above="@+id/button2"
            android:layout_centerHorizontal="true"
            android:text="@string/cal" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/EditText01"
            android:layout_alignLeft="@+id/textView4"
            android:text="@string/quantity" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/value" />

        <EditText
            android:id="@+id/EditText01"
            android:layout_width="132dp"
            android:layout_height="35dp"
            android:layout_below="@+id/editText1"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:inputType="numberDecimal" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView4"
            android:layout_alignBottom="@+id/textView4"
            android:layout_alignLeft="@+id/EditText01"
            android:layout_alignRight="@+id/EditText01" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editText1"
            android:layout_alignLeft="@+id/textView3"
            android:text="@string/price" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/EditText01"
            android:layout_alignRight="@+id/cal_price_btn"
            android:layout_marginRight="19dp"
            android:text="@string/kilo" />

    </RelativeLayout>

</LinearLayout>
