<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/RelativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="20dp" >

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView4"
            android:layout_alignLeft="@+id/textView6"
            android:text="@string/bath" />

        <Button
            android:id="@+id/button3"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_alignBaseline="@+id/button2"
            android:layout_alignBottom="@+id/button2"
            android:layout_alignRight="@+id/button1"
            android:text="@string/reset" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/EditText01"
            android:layout_alignLeft="@+id/textView4"
            android:text="@string/rate" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editText1"
            android:layout_alignLeft="@+id/textView3"
            android:layout_alignRight="@+id/textView3"
            android:text="@string/value" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/EditText01"
            android:layout_alignRight="@+id/button1"
            android:layout_marginRight="19dp"
            android:text="%" />

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/textView7"
            android:layout_marginTop="19dp"
            android:text="@string/cal" />

        <Button
            android:id="@+id/button2"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_alignLeft="@+id/button1"
            android:layout_below="@+id/button1"
            android:layout_marginTop="18dp"
            android:text="@string/save" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editText1"
            android:layout_alignLeft="@+id/textView6"
            android:text="@string/bath" />

        <EditText
            android:id="@+id/EditText01"
            android:layout_width="132dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/editText1"
            android:layout_marginRight="85dp"
            android:ems="10"
            android:gravity="center_vertical"
            android:inputType="numberDecimal" >

            
        </EditText>

        <EditText
            android:id="@+id/editText1"
            android:layout_width="132dp"
            android:layout_height="35dp"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/EditText01"
            android:layout_marginTop="48dp"
            android:ems="10"
            android:gravity="center_vertical"
            android:inputType="numberDecimal" >
            <requestFocus />
         </EditText>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/button1"
            android:layout_below="@+id/textView3"
            android:layout_marginTop="17dp"
            android:text="@string/value_share" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView7"
            android:layout_alignLeft="@+id/EditText01"
            android:layout_alignRight="@+id/EditText01"
            android:layout_alignTop="@+id/textView4" />

    </RelativeLayout>


